[workspace]
resolver = "2"

members = [
    "./evento",
    "./evento-core",
    "./evento-sql",
    "./evento-sql-migrator",
    "./evento-macro",
    "./examples/*"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/timayz/evento"

[workspace.dependencies]
# Internal crates
evento = { path = "./evento", version = "1.8.0", default-features = false }
evento-core = { path = "./evento-core", version = "1.8.0", default-features = false }
evento-sql = { path = "./evento-sql", version = "1.8.0", default-features = false }
evento-sql-migrator = { path = "./evento-sql-migrator", version = "1.8.0", default-features = false }
evento-macro = { path = "./evento-macro", version = "1.8.0" }
bank = { path = "./examples/bank" }

# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
bincode = "2.0"
thiserror = "2.0"
tracing = "0.1"
base64 = "0.22"
once_cell = "1"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
futures-util = "0.3"
backon = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ulid = { version = "1.2", features = ["serde"] }

# Database
sqlx = { version = "0.8" }
sqlx_migrator = "0.18"
sea-query = { version = "1.0.0-rc.23", default-features = false, features = ["derive", "audit"] }
sea-query-sqlx = { version = "0.8.0-rc.10", features = ["runtime-tokio"] }

# Proc macro
quote = "1.0"
convert_case = "0.10"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

# Web
axum = "0.8"
askama = "0.15"

# Testing
rand = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
