[workspace]
resolver = "2"

members = [
    "./evento",
    "./evento-core",
    "./evento-sql",
    "./evento-sql-migrator",
    "./evento-macro",
    "./evento-fjall",
    "./examples/*"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/timayz/evento"

[workspace.dependencies]
# Internal crates
evento = { path = "./evento" }
evento-core = { path = "./evento-core" }
evento-sql = { path = "./evento-sql" }
evento-sql-migrator = { path = "./evento-sql-migrator" }
evento-macro = { path = "./evento-macro" }
evento-fjall = { path = "./evento-fjall" }
bank = { path = "./examples/bank" }

# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
bitcode = "0.6"
thiserror = "2.0"
tracing = "0.1"
base64 = "0.22"
once_cell = "1"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures-util = "0.3"
backon = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ulid = { version = "1.2", features = ["serde"] }

# Database
sqlx = { version = "0.8" }
sqlx_migrator = "0.18"
sea-query = { version = "1.0.0-rc.29", default-features = false, features = ["derive", "audit"] }
sea-query-sqlx = { version = "0.8.0-rc.11", features = ["runtime-tokio"] }
fjall = "2.11"

# Proc macro
quote = "1.0"
convert_case = "0.10"
syn = { version = "2.0.114", features = ["full", "parsing", "extra-traits"] }

# Web
axum = "0.8"
askama = "0.15"

# Testing
rand = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
