[package]
name = "evento-accord"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACCORD consensus protocol for evento"

[dependencies]
evento-core = { workspace = true }
bitcode = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
futures = "0.3"

# Observability
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true }

[features]
default = []
prometheus = ["metrics-exporter-prometheus"]
opentelemetry = ["dep:tracing-opentelemetry", "dep:tracing-subscriber", "dep:opentelemetry", "dep:opentelemetry_sdk"]

[dev-dependencies]
tokio-test = "0.4"
ctrlc = "3.4"
