[package]
name = "evento-axum"
version = "0.10.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento"

[dependencies]
axum = { version = "0.7.4" }
