[package]
name = "evento-core"
version = "1.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Core types and traits for evento event sourcing library."
documentation = "https://docs.rs/evento-core"
readme = "README.md"

[dependencies]
serde.workspace = true
ulid.workspace = true
tokio.workspace = true
evento-macro = { workspace = true, optional = true }
anyhow.workspace = true
rkyv.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
base64.workspace = true
backon.workspace = true
futures-util = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[features]
default = ["macro"]
macro = ["evento-macro"]
group = ["futures-util"]
rw = []
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
