[package]
name = "evento-core"
version = "2.0.0-alpha.11"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Core types and traits for evento event sourcing library."
documentation = "https://docs.rs/evento-core"
readme = "README.md"

[dependencies]
serde.workspace = true
ulid.workspace = true
tokio.workspace = true
evento-macro = { path = "../evento-macro", optional = true, version = "2.0.0-alpha.11" }
anyhow.workspace = true
bitcode.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
base64.workspace = true
backon.workspace = true
futures-util = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true

[features]
default = ["macro"]
macro = ["evento-macro"]
group = ["futures-util"]
rw = []
sqlite = []
mysql = []
postgres = []
