[package]
name = "evento-fjall"
version = "2.0.0-alpha.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Fjall embedded key-value store implementation for evento event sourcing library"
documentation = "https://docs.rs/evento-fjall"
readme = "README.md"

[dependencies]
evento-core = { path = "../evento-core", version = "2.0.0-alpha.4" }
anyhow.workspace = true
bitcode.workspace = true
async-trait.workspace = true
ulid.workspace = true
tokio.workspace = true
fjall.workspace = true

[dev-dependencies]
tempfile = "3.24"
