[package]
name = "evento-macro"
version = "1.7.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
sha3 = "0.10"
convert_case = "0.9"
syn = { version = "2.0", features = [
	"full",
	"parsing",
	"extra-traits",
] }
