[package]
name = "evento-macro"
version = "2.0.0-alpha.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
documentation = "https://docs.rs/evento"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
convert_case.workspace = true
syn.workspace = true
