[package]
name = "evento-query"
version = "0.10.2"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento"

[features]
default = []
full = ["pg"]
pg = ["dep:sqlx"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"], optional = true }
thiserror = "1.0.57"
chrono = { version = "0.4.34", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.30"
base64 = "0.21.7"
harsh = "0.2.2"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
parse-display = "0.9.0"
tokio-shared-rt = "0.1.0"
