[package]
name = "evento-query"
version = "0.10.2"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento"

[features]
default = []
full = ["pg"]
pg = ["dep:sqlx"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"], optional = true }
thiserror = "2.0.3"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.31"
base64 = "0.22.1"
harsh = "0.2.2"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
parse-display = "0.10.0"
tokio-shared-rt = "0.1.0"
