[package]
name = "evento-sql-migrator"
version = "2.0.0-alpha.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "SQL migrations for evento event sourcing library."
documentation = "https://docs.rs/evento-sql-migrator"
readme = "README.md"

[dependencies]
evento-sql = { path = "../evento-sql", version = "2.0.0-alpha.9" }
sqlx.workspace = true
sqlx_migrator.workspace = true
sea-query.workspace = true
async-trait.workspace = true

[features]
default = ["sqlite", "mysql", "postgres"]
sqlite = ["evento-sql/sqlite", "sea-query/backend-sqlite", "sqlx/sqlite", "sqlx_migrator/sqlite"]
mysql = ["evento-sql/mysql", "sea-query/backend-mysql", "sqlx/mysql", "sqlx_migrator/mysql"]
postgres = ["evento-sql/postgres", "sea-query/backend-postgres", "sqlx/postgres", "sqlx_migrator/postgres"]
