[package]
name = "evento-sql"
version = "1.8.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "SQL database implementations for evento event sourcing library."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento-sql"
readme = "README.md"

[dependencies]
evento-core = { path = "../evento-core", version = "1.8.0", default-features = false }
anyhow = "1.0"
bincode = "2.0"
async-trait = "0.1"
ulid = { version = "1.2", features = ["serde"] }
sqlx = { version = "0.8" }
sea-query = { version = "1.0.0-rc.23", default-features = false, features = ["derive", "audit"] }
sea-query-sqlx = { version = "0.8.0-rc.10", features = ["runtime-tokio"] }

[features]
default = ["sqlite", "mysql", "postgres"]
sqlite = ["evento-core/rw", "evento-core/sqlite", "sea-query/backend-sqlite", "sea-query-sqlx/sqlx-sqlite", "sqlx/sqlite"]
mysql = ["evento-core/rw", "evento-core/mysql", "sea-query/backend-mysql", "sea-query-sqlx/sqlx-mysql", "sqlx/mysql"]
postgres = ["evento-core/rw", "evento-core/postgres", "sea-query/backend-postgres", "sea-query-sqlx/sqlx-postgres", "sqlx/postgres"]
