[package]
name = "evento-store"
version = "0.10.2"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento"

[features]
default = []
full = ["memory", "pg"]
memory = ["dep:parking_lot"]
pg = ["dep:sqlx", "evento-query/pg"]

[dependencies]
serde = "1.0.188"
serde_json = "1.0.107"
parking_lot = { version = "0.12.1", optional = true }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono", "json"], optional = true }
thiserror = "1.0.49"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.28"
dyn-clone = "1.0.14"
async-trait = "0.1.73"
anyhow = "1.0.75"
evento-query = { path = "../evento-query", version = "0.9.1", optional = true }

[dependencies.uuid]
version = "1.11.0"
features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
	"serde",
]

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
parse-display = { version = "0.8.2" }
tokio-shared-rt = "0.1.0"
