[package]
name = "evento-store"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento"

[features]
default = []
full = ["memory", "pg"]
memory = ["dep:parking_lot"]
pg = ["dep:sqlx", "evento-query/pg"]

[dependencies]
serde = "1.0.196"
serde_json = "1.0.113"
parking_lot = { version = "0.12.1", optional = true }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "json"], optional = true }
thiserror = "1.0.57"
chrono = { version = "0.4.34", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.30"
dyn-clone = "1.0.16"
async-trait = "0.1.77"
anyhow = "1.0.79"
evento-query = { path = "../evento-query", version = "0.10.0" }

[dependencies.uuid]
version = "1.7.0"
features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
	"serde",
]

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
parse-display = { version = "0.9.0" }
tokio-shared-rt = "0.1.0"
