[package]
name = "evento-store"
version = "0.10.2"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento"

[features]
default = []
full = ["memory", "pg"]
memory = ["dep:parking_lot"]
pg = ["dep:sqlx", "evento-query/pg"]

[dependencies]
serde = "1.0.215"
serde_json = "1.0.133"
parking_lot = { version = "0.12.3", optional = true }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "json"], optional = true }
thiserror = "1.0.69"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.31"
dyn-clone = "1.0.17"
async-trait = "0.1.83"
anyhow = "1.0.93"
evento-query = { path = "../evento-query", version = "0.10.2" }

[dependencies.uuid]
version = "1.11.0"
features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
	"serde",
]

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
parse-display = { version = "0.10.0" }
tokio-shared-rt = "0.1.0"
