[package]
name = "evento-test"
version = "2.0.0-alpha.12"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Event sourcing and CQRS toolkit with SQL persistence, projections, and subscriptions"
documentation = "https://docs.rs/evento"
readme = "README.md"

[dependencies]
evento = { path = "../evento", version = "2.0.0-alpha.12" }
bank = { path = "../examples/bank", version = "2.0.0-alpha.12" }
ulid.workspace = true
rand.workspace = true
anyhow.workspace = true
once_cell.workspace = true
