[package]
name = "evento"
version = "1.8.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A collection of libraries and tools that help you build DDD, CQRS, and event sourcing."
repository = "https://github.com/timayz/evento"
documentation = "https://docs.rs/evento"
readme = "README.md"

[dependencies]
evento-core = { path = "../evento-core", version = "1.8.0" }
evento-sql = { path = "../evento-sql", version = "1.8.0", optional = true }
evento-sql-migrator = { path = "../evento-sql-migrator", version = "1.8.0", optional = true }
sqlx_migrator = { version = "0.18", optional = true }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "sqlite", "mysql", "postgres"] }
rand = "0.9"
bank = { path = "../examples/bank" }
ulid = { version = "1.2", features = ["serde"] }
tokio = { version = "1.47", features = ["full"] }
sea-query = { version = "1.0.0-rc.23", features = ["backend-sqlite", "backend-mysql", "backend-postgres"] }
sea-query-sqlx = { version = "0.8.0-rc.10", features = ["runtime-tokio", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres"] }
anyhow = "1.0"

[features]
default = ["macro", "handler", "stream", "group", "rw", "sql"]
macro = ["evento-core/macro"]
stream = ["evento-core/stream"]
group = ["evento-core/group"]
handler = ["evento-core/handler"]
rw = ["evento-core/rw"]
sql = ["sqlite", "mysql", "postgres"]
sqlite = ["evento-sql/sqlite", "evento-sql-migrator/sqlite", "sqlx_migrator/sqlite"]
mysql = ["evento-sql/mysql", "evento-sql-migrator/mysql", "sqlx_migrator/mysql"]
postgres = ["evento-sql/postgres", "evento-sql-migrator/postgres", "sqlx_migrator/postgres"]
