[package]
name = "evento"
version = "1.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Event sourcing and CQRS toolkit with SQL persistence, projections, and subscriptions"
documentation = "https://docs.rs/evento"
readme = "README.md"

[dependencies]
evento-core.workspace = true
evento-sql = { workspace = true, optional = true }
evento-sql-migrator = { workspace = true, optional = true }
sqlx_migrator = { workspace = true, optional = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "any", "sqlite", "mysql", "postgres"] }
rand.workspace = true
bank.workspace = true
ulid.workspace = true
tokio.workspace = true
sea-query = { workspace = true, features = ["backend-sqlite", "backend-mysql", "backend-postgres"] }
sea-query-sqlx = { workspace = true, features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres"] }
anyhow.workspace = true

[features]
default = ["macro"]
macro = ["evento-core/macro"]
group = ["evento-core/group"]
rw = ["evento-core/rw"]
sql = ["sqlite", "mysql", "postgres"]
sqlite = ["evento-sql/sqlite", "evento-sql-migrator/sqlite", "sqlx_migrator/sqlite"]
mysql = ["evento-sql/mysql", "evento-sql-migrator/mysql", "sqlx_migrator/mysql"]
postgres = ["evento-sql/postgres", "evento-sql-migrator/postgres", "sqlx_migrator/postgres"]
