[package]
name = "example"
version ="0.5.7"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
parse-display = "0.8.2"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
nanoid = "0.4.0"
futures = "0.3.28"
validator = { version = "0.16.1", features = ["derive"] }
anyhow = "1.0.74"
axum = { version = "0.6.20"}
tokio = { version = "1.31.0" }
evento = { path = "../evento" }
evento-axum = { path = "../evento-axum" }

[dependencies.mongodb]
version = "2.6.0"
features = ["tokio-runtime"]
