[package]
name = "example"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
parse-display = "0.8.2"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
nanoid = "0.4.0"
futures = "0.3.28"
validator = { version = "0.16.1", features = ["derive"] }
anyhow = "1.0.75"
axum = { version = "0.6.20" }
tokio = { version = "1.32.0" }
evento = { path = "../evento", version = "0.7.0" }
evento-axum = { path = "../evento-axum", version = "0.7.0" }

[dependencies.mongodb]
version = "2.6.1"
features = ["tokio-runtime"]
