[package]
name = "example"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
parse-display = "0.8.2"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
nanoid = "0.4.0"
validator = { version = "0.16.1", features = ["derive"] }
anyhow = "1.0.75"
axum = { version = "0.6.20" }
tokio = { version = "1.32.0" }
evento = { path = "../evento", version = "0.9.1", features = ["pg"] }
evento-axum = { path = "../evento-axum", version = "0.9.1" }
async-trait = "0.1.73"

[dependencies.mongodb]
version = "2.7.0"
features = ["tokio-runtime"]
