[package]
name = "bank-axum-sqlite"
version = "2.0.0-alpha.12"
edition = "2021"

[dependencies]
bank.workspace = true
evento = { workspace = true, features = ["sqlite"] }
axum.workspace = true
askama.workspace = true
tokio.workspace = true
serde.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
sqlx_migrator.workspace = true
ulid.workspace = true
anyhow.workspace = true
