[package]
name = "inventory"
version = "1.0.0-alpha.7"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
futures = "0.3.30"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "any" ] }
validator = { version = "0.16.1", features = ["derive"] }
nanoid = "0.4.0"
parse-display = "0.8.2"
convert_case = "0.6.0"
chrono = { version = "0.4.31", features = ["unstable-locales"] }
ureq = { version = "2.9.1", features = ["json"] }
serde = "1.0.193"
anyhow = "1.0.77"
rust-embed = "8.2.0"
mime_guess = "2.0.4"
async-trait = "0.1.75"
rand = "0.8.5"
evento = { path = "../../evento", version = "1.0.0-alpha.7", features = ["pg"] }
evento-axum = { path = "../../evento-axum", version = "1.0.0-alpha.7" }
evento-query = { path = "../../evento-query", version = "1.0.0-alpha.7", features = ["pg"] }
