[package]
name = "inventory"
version = "0.10.2"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
futures = "0.3.30"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "any" ] }
validator = { version = "0.16.1", features = ["derive"] }
nanoid = "0.4.0"
parse-display = "0.9.0"
convert_case = "0.6.0"
chrono = { version = "0.4.34", features = ["unstable-locales"] }
ureq = { version = "2.9.6", features = ["json"] }
serde = "1.0.197"
anyhow = "1.0.80"
rust-embed = "8.2.0"
mime_guess = "2.0.4"
async-trait = "0.1.77"
rand = "0.8.5"
evento = { path = "../../evento", version = "0.10.2", features = ["pg"] }
evento-axum = { path = "../../evento-axum", version = "0.10.2" }
evento-query = { path = "../../evento-query", version = "0.10.2", features = ["pg"] }
